--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="grid place-items-center p-8">
     <h1>Københavner Billeder</h1>
+    <p>Hello</p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
