--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Københavner Billeder</title>
   </head>
   <body class="grid place-items-center p-8">
-    <h1>Københavner Billeder</h1>
+    <h1>Københavner Billeder test 1</h1>
     <p>Hello</p>
     <script type="module" src="./main.js"></script>
   </body>
